with-tls/prisma/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "prisma-primary"
  namespace: prisma
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    certmanager.k8s.io/acme-challenge-type: "dns01"
    certmanager.k8s.io/acme-dns01-provider: "prod-clouddns"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: <YOUR_DOMAIN>
    http:
      paths:
        - path: /management
          backend:
            serviceName: prisma-primary-service
            servicePort: 4466

        - path: /
          backend:
            serviceName: prisma-secondary-service
            servicePort: 4466
  
  tls:
  - hosts:
    - <YOUR_DOMAIN>
    secretName: deployment-tls-prod
